@@ -856,6 +856,7 @@ OpenXML_TRANSLATE_EXCEL_COMMENTS=Comme&ntaires
 OpenXML_POWER_POINT=Power Point
 OpenXML_TRANSLATE_SLIDE_COMMENTS=Commentaires des &diapositives
 OpenXML_TRANSLATE_SLIDE_MASTERS=Masque des diapositi&ves
+OpenXML_TRANSLATE_SLIDE_LAYOUTS=M&ise en page des diapositives
 
 OpenXML_ERROR_IN_FILE=Erreur dans le fichier
 
